--- a/desafios/desafio10/index.html
+++ b/desafios/desafio10/index.html
@@ -19,6 +19,7 @@
             <a href="#">Fale Conosco</a>
         </nav>
     </header>
+    <main></main>
 
     <main>
         <section id="historia">
